--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,35 @@
-.App {
-  text-align: center;
+.app-wrapper{
+  margin: 0 auto;
+  width: 1200px;
+  display: grid;
+
+  grid-template-areas: 
+  "h h"
+  "n c";
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+}
+.nav{
+  grid-area: n; 
+  background-color: hotpink;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.header{
+  grid-area: h;
+  background-color: aqua;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.content{
+  grid-area: c;
+  background-color: cornflowerblue;
+
 }
 
-.App-link {
-  color: #61dafb;
+.header img{
+  width: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content img{
+  height: 150px;
 }
